--- a/src/main/resources/templates/fragments/mainsidebar.html
+++ b/src/main/resources/templates/fragments/mainsidebar.html
@@ -30,8 +30,8 @@
               </p>
             </a>
             <ul class="nav nav-treeview">
-            		<li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Master Vendor</p></a></li>
-                <li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Master Company</p></a></li>
+            		<li class="nav-item"><a href="/vendor/add" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Master Vendor</p></a></li>
+                <li class="nav-item"><a href="/company/add" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Master Company</p></a></li>
             </ul>
           </li>
 
