done crd master

--- a/src/main/resources/templates/company/add.html
+++ b/src/main/resources/templates/company/add.html
@@ -6,6 +6,31 @@
     layout:decorator="layout">
     <head>
         <!-- Head content - Meta tags, title, CSS references -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+        function saveCompany() {
+            const dataToSend = {
+                companyId: $("#Cid").val(),
+                companyName: $("#Cname").val(),
+                companyAddress: $("#Caddress").val(),
+                contactName: $("#Coname").val(),
+                contactNumber: $("#Conum").val()
+            };
+            $.ajax({
+            type: "post",
+            url: "/company/add-company",
+            data: JSON.stringify(dataToSend),
+            contentType: 'application/json',
+            success: function () {
+                window.location.href = "/company/";
+            },
+            error: (err) => {
+                console.log(err)
+            }
+            });
+        }
+            
+    </script>
     </head>
     <section layout:fragment="header">
         <div class="container-fluid">
@@ -39,43 +64,40 @@
                         </div>
                         <div class="">
                             <div>
-                                <form id="formAddBeneficiary">
+                                <form id="addMasterCompany">
                                     <div class="d-flex flex-column flex">
                                         <div class="">
                                             <label for="companyId">Company ID</label> 
-                                            <input type="text" class="form-control myInput w-25" id="beneficiaryCode" readonly="readonly"/>
-                                        </div>
-                                        <div class="d-flex flex-column">
-                                            <label for="beneficiaryCode">Date</label> 
-                                            <input type="date" class="w-25" placeholder="Select Date">
+                                            <input type="text" class="form-control myInput w-25" id="Cid" readonly="readonly" th:value="${counter}"/>
                                         </div>
                                         <div class="">
-                                            <label for="bankAddress">Company Name</label> 
-                                            <input type="text" class="form-control w-25" placeholder="Insert company name here..." id="bankAddress"/>
+                                            <label for="cp">Company Name</label> 
+                                            <input type="text" class="form-control w-25" placeholder="Insert company name here..." id="Cname"/>
                                         </div>
                                         <div class="">
                                             <label for="emailRef">Company Address</label> 
-                                            <input type="text" id="emailReff" placeholder="Insert company adress here..." class="w-50 form-control myInput" ></input>
+                                            <input type="text" id="Caddress" placeholder="Insert company adress here..." class="w-50 form-control myInput" ></input>
                                         </div>
                                         <div class="">
                                             <label for="emailRef">Contact Name</label> 
-                                            <input type="text" id="emailReff" placeholder="Insert contact name here..." class="w-25 form-control myInput" ></input>
+                                            <input type="text" id="Coname" placeholder="Insert contact name here..." class="w-25 form-control myInput" ></input>
                                       </div>
                                       <div class="">
                                             <label for="emailRef">Contact Number</label> 
-                                            <input type="text" id="emailReff" placeholder="Insert contact number here..." class="w-25 form-control myInput" ></input>
+                                            <input type="text" id="Conum" placeholder="Insert contact number here..." class="w-25 form-control myInput" ></input>
                                     </div>
                                     </div>
-                                    <div class="">
-                                        <div class="box-footer d-flex flex-row-reverse">
-                                          <div class="pl-3">
-                                            <button type="button" id="saveBeneficiary" class="btn bg-black pl-2">Save</button>
-                                          </div>
-                                            <a href="./cancelbeneficiary" type="button"
-                                                class="btn bg-gray">Cancel</a>	
-                                        </div>
-                                    </div>
+                                    
                                 </form>
+                                <div class="">
+                                    <div class="box-footer d-flex flex-row-reverse">
+                                      <div class="pl-3">
+                                        <button onclick="saveCompany()" class="btn bg-black pl-2">Save</button>
+                                      </div>
+                                        <a href="/company/" type="button"
+                                            class="btn bg-gray">Cancel</a>	
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <!-- /.card -->
