--- a/src/main/resources/templates/company/edit.html
+++ b/src/main/resources/templates/company/edit.html
@@ -8,7 +8,7 @@
         <!-- Head content - Meta tags, title, CSS references -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
-        function saveCompany() {
+        function editCompany() {
             const dataToSend = {
                 companyId: $("#Cid").val(),
                 companyName: $("#Cname").val(),
@@ -18,7 +18,7 @@
             };
             $.ajax({
             type: "post",
-            url: "/company/add-company",
+            url: "/company/edit-company",
             data: JSON.stringify(dataToSend),
             contentType: 'application/json',
             success: function () {
@@ -59,7 +59,7 @@
                     <div class="card p-5">
                         <div class="pb-3">
                             <h2 class="card-title fs-2 font-weight-bold" >
-                                Master Company Add
+                                Master Company Edit
                             </h2>
                         </div>
                         <div class="">
@@ -68,23 +68,23 @@
                                     <div class="d-flex flex-column flex">
                                         <div class="">
                                             <label for="companyId">Company ID</label> 
-                                            <input type="text" class="form-control myInput w-25" id="Cid" readonly="readonly" th:value="${counter}"/>
+                                            <input type="text" class="form-control myInput w-25" id="Cid" readonly="readonly" th:value="${company.companyId}"/>
                                         </div>
                                         <div class="">
                                             <label for="cp">Company Name</label> 
-                                            <input type="text" class="form-control w-25" placeholder="Insert company name here..." id="Cname"/>
+                                            <input type="text" class="form-control w-25" placeholder="Insert company name here..." th:value="${company.companyName}" id="Cname"/>
                                         </div>
                                         <div class="">
                                             <label for="emailRef">Company Address</label> 
-                                            <input type="text" id="Caddress" placeholder="Insert company adress here..." class="w-50 form-control myInput" ></input>
+                                            <input type="text" id="Caddress" th:value="${company.companyAddress}" placeholder="Insert company adress here..." class="w-50 form-control myInput" ></input>
                                         </div>
                                         <div class="">
                                             <label for="emailRef">Contact Name</label> 
-                                            <input type="text" id="Coname" placeholder="Insert contact name here..." class="w-25 form-control myInput" ></input>
+                                            <input type="text" id="Coname" th:value="${company.contactName}" placeholder="Insert contact name here..." class="w-25 form-control myInput" ></input>
                                       </div>
                                       <div class="">
                                             <label for="emailRef">Contact Number</label> 
-                                            <input type="text" id="Conum" placeholder="Insert contact number here..." class="w-25 form-control myInput" ></input>
+                                            <input type="text" id="Conum" th:value="${company.contactName}" placeholder="Insert contact number here..." class="w-25 form-control myInput" ></input>
                                     </div>
                                     </div>
                                     
@@ -92,7 +92,7 @@
                                 <div class="">
                                     <div class="box-footer d-flex flex-row-reverse">
                                       <div class="pl-3">
-                                        <button onclick="saveCompany()" class="btn bg-black pl-2">Save</button>
+                                        <button onclick="editCompany()" class="btn bg-black pl-2">Save</button>
                                       </div>
                                         <a href="/company/" type="button"
                                             class="btn bg-gray">Cancel</a>	
