--- a/src/main/resources/templates/fragments/mainsidebar.html
+++ b/src/main/resources/templates/fragments/mainsidebar.html
@@ -43,8 +43,8 @@
               </p>
             </a>
             <ul class="nav nav-treeview">
-            		<li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Document - IN</p></a></li>
-                <li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Document - OUT</p></a></li>
+            		<li class="nav-item"><a href="/document-in/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Document - IN</p></a></li>
+                <li class="nav-item"><a href="/document-out/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Document - OUT</p></a></li>
                 <li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Document - TRACK</p></a></li>
                 <li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Circulation Document</p></a></li>
                 <li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Received Document</p></a></li>
