--- a/src/main/resources/templates/circulation_document/edit.html
+++ b/src/main/resources/templates/circulation_document/edit.html
@@ -11,6 +11,12 @@
 
         $(document).ready(function(){
             var selectedValues = {};
+            const tempDocs = $('[id*=DOC]');
+            tempDocs.each((id, res) => {
+                selectedValues[res.id] = true;
+            })
+
+            
             $('#selectedCompanyTest').change(function(){
                 $('#selectedCompanyTest option:selected').each(function(){
                     console.log(selectedValues);
@@ -49,7 +55,9 @@
                                 newOption.text = option.documentId;
                                 dropdown.appendChild(newOption);
                             })
+
                             $('#selectedOptionsContainer').html('')
+
                         },
                         error: (err) => {
                             console.log(err)
@@ -67,7 +75,7 @@
             });
         });
 
-        function saveCirculationDocument() {
+        function updateCirculationDocument() {
             var temp =  $('#selectedOptionsContainer').children()
             
             const selectedDocId = []
@@ -89,7 +97,7 @@
 
             $.ajax({
                 type: "post",
-                url: "add",
+                url: "update",
                 data: JSON.stringify(dataToSend),
                 contentType: 'application/json',
                 success: function () {
@@ -141,34 +149,36 @@
                                             <div class="d-flex flex-column flex">
                                                 <div class="">
                                                     <label for="companyId">Circulation Document ID</label> 
-                                                    <input type="text" class="form-control myInput w-25" id="CRid" readonly="readonly" th:value="${counter}"/>
+                                                    <input type="text" class="form-control myInput w-25" id="CRid" readonly="readonly" th:value="${data.circulationDocId}"/>
                                                 </div>
                                                 <div class="d-flex flex-column">
                                                     <label>Company To</label> 
-                                                    <select id="selectedCompany" style="width: 50%;">
-                                                        <option style="color: gray; cursor: default; pointer-events: none;" value="">Select an Company</option>
-                                                        <option th:each="company : ${companies}" th:value="${company.companyId}" th:text="${company.companyName}"></option>
+                                                    <select id="selectedCompany" th:field="${data.company.companyId}" class="w-25">
+                                                        <option th:each="company : ${companies}" th:selected="${data.company.companyId eq company.companyId}" th:value="${company.companyId}" th:text="${company.companyName}"></option>
                                                     </select>
                                                 </div>
                                                 <div class="">
                                                     <label for="cp">Received By</label> 
-                                                    <input type="text" class="form-control w-50" placeholder="Insert Ref Description" id="receivedBy"/>
+                                                    <input th:value="${data.receivedBy}" type="text" class="form-control w-50" placeholder="Insert Ref Description" id="receivedBy"/>
                                                 </div>
                                                 <div class="">
                                                     <label for="cp">Ref Description</label> 
-                                                    <textarea type="text" class="form-control w-50" placeholder="Insert Ref Description" id="des"></textarea>
+                                                    <textarea th:text="${data.refDescription}" type="text" class="form-control w-50" placeholder="Insert Ref Description" id="des"></textarea>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="w-50">
                                             <div class="container mt-4">
                                                 <h3>Select Options</h3>
-                                                <select id="selectedCompanyTest" class="w-50">
+                                                <select id="selectedCompanyTest" class="w-25">
+                                                    <option th:each="doc:${allDocs}" th:text="${doc.documentId}"></option>
                                                 </select>
                                         
                                                 <div class="mt-3">
                                                     <h4>Selected Options</h4>
-                                                    <div id="selectedOptionsContainer"></div>
+                                                    <div id="selectedOptionsContainer">
+                                                        <div th:each="doc:${docs}" th:id="${doc.documentId}" th:text="${doc.documentId}" class="badge badge-info mr-2"></div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -179,7 +189,7 @@
                                 <div class="">
                                     <div class="box-footer d-flex flex-row-reverse">
                                       <div class="pl-3">
-                                        <button onclick="saveCirculationDocument()" class="btn bg-black pl-2">Save</button>
+                                        <button onclick="updateCirculationDocument()" class="btn bg-black pl-2">Save</button>
                                       </div>
                                         <a href="/circulation-document/" type="button"
                                             class="btn bg-gray">Cancel</a>	
