done document received

--- a/src/main/resources/templates/fragments/mainsidebar.html
+++ b/src/main/resources/templates/fragments/mainsidebar.html
@@ -47,7 +47,7 @@
                 <li class="nav-item"><a href="/document-out/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Document - OUT</p></a></li>
                 <li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Document - TRACK</p></a></li>
                 <li class="nav-item"><a href="/circulation-document/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Circulation Document</p></a></li>
-                <li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Received Document</p></a></li>
+                <li class="nav-item"><a href="/received-document/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Received Document</p></a></li>
             </ul>
           </li>
 
