improvement: add dropdown when container is clicked

--- a/src/main/resources/templates/circulation_document/edit.html
+++ b/src/main/resources/templates/circulation_document/edit.html
@@ -14,6 +14,11 @@
             const tempDocs = $('[id*=DOC]');
             tempDocs.each((id, res) => {
                 selectedValues[res.id] = true;
+                var dropdown = document.getElementById("selectedCompanyTest");
+                var preOption = document.createElement('option');
+                preOption.value = res.id;
+                preOption.text = res.id;
+                dropdown.appendChild(preOption);
             })
 
             
