--- a/src/main/resources/templates/received_document/edit.html
+++ b/src/main/resources/templates/received_document/edit.html
@@ -11,14 +11,13 @@
 
         $(document).ready(function(){
             var selectedValues = {};
-            const tempDocs = $('[id*=DOC]');
-            tempDocs.each((id, res) => {
-                selectedValues[res.id] = true;
-                var dropdown = document.getElementById("selectedCompanyTest");
-                var preOption = document.createElement('option');
-                preOption.value = res.id;
-                preOption.text = res.id;
-                dropdown.appendChild(preOption);
+
+            var docIds = $('#selectedOptionsContainer > div').map(function() {
+                return $(this).text().trim();
+            }).get();
+
+            docIds.forEach((id) => {
+                selectedValues[id] = true;
             })
 
             
@@ -34,50 +33,6 @@
                 });
             });
 
-
-            $('#selectedCompany').change(function(){
-                $('#selectedCompany option:selected').each(function(){
-                    var selectedValue = $(this).val();
-                    var selectedText = $(this).text();
-                    
-
-                    $.ajax({
-                        type: "get",
-                        url: "docs/" + selectedValue,
-                        success: function (res) {
-                            var dropdown = document.getElementById("selectedCompanyTest");
-
-                            var preOption = document.createElement('option');
-                            preOption.value = '';
-                            preOption.text = 'Select an Document';
-                            preOption.style = 'color: gray; cursor: default; pointer-events: none;';
-                            
-                            dropdown.innerHTML = '';
-                            dropdown.appendChild(preOption);
-                            res.documents.forEach((option) => {
-                                var newOption = document.createElement('option');
-                                newOption.value = option.documentId;
-                                newOption.text = option.documentId;
-                                dropdown.appendChild(newOption);
-                            })
-
-                            $('#selectedOptionsContainer').html('')
-
-                        },
-                        error: (err) => {
-                            console.log(err)
-                        }
-                    });
-                });
-            });
-
-            $('#selectedOptionsContainer').on('click', '.badge', function(e){
-                var deselectedValue = $(this).attr('data-value');
-                var dId = $(this).attr("id")
-                selectedValues[dId] = false;
-                $('#selectedCompanyTest option[value="' + deselectedValue + '"]').prop('selected', false);
-                $(this).remove();
-            });
         });
 
         function updateReceivedDocument() {
@@ -94,8 +49,6 @@
             
             const dataToSend = {
                 receivedDocumentId : $("#CRid").val(),
-                documentsId : selectedDocId,
-                companyTo : selectedCompany,
                 receivedBy : $("#receivedBy").val(),
                 refDescription : $("#des").val()
             }
@@ -158,7 +111,7 @@
                                                 </div>
                                                 <div class="d-flex flex-column">
                                                     <label>Company To</label> 
-                                                    <select id="selectedCompany" th:field="${data.company.companyId}" class="w-25">
+                                                    <select disabled id="selectedCompany" th:field="${data.company.companyId}" class="w-25">
                                                         <option th:each="company : ${companies}" th:selected="${data.company.companyId eq company.companyId}" th:value="${company.companyId}" th:text="${company.companyName}"></option>
                                                     </select>
                                                 </div>
@@ -175,14 +128,15 @@
                                         <div class="w-50">
                                             <div class="container mt-4">
                                                 <h3>Select Options</h3>
-                                                <select id="selectedCompanyTest" class="w-25">
-                                                    <option th:each="doc:${allDocs}" th:text="${doc.documentId}"></option>
+                                                <select id="selectedCompanyTest" class="w-25" disabled>
+                                                    <option th:each="doc:${allDocs}" th:text="${doc.circulationDocId}"></option>
+                                                    <option th:each="doc:${docs}" th:text="${doc.circulationDocId}"></option>
                                                 </select>
                                         
-                                                <div class="mt-3">
+                                                <div class="mt-3" >
                                                     <h4>Selected Options</h4>
                                                     <div id="selectedOptionsContainer">
-                                                        <div th:each="doc:${docs}" th:id="${doc.documentId}" th:value="${doc.documentId}" th:text="${doc.documentId}" class="badge badge-info mr-2"></div>
+                                                        <div th:each="doc:${docs}" th:id="${doc.circulationDocId}" th:value="${doc.circulationDocId}" th:text="${doc.circulationDocId}" class="badge badge-info mr-2"></div>
                                                     </div>
                                                 </div>
                                             </div>
